2023-09-17T16:10:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6214572866 # 1909
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 7 18
* notice: prev accum: outdated-unq outdated-all / unq all: 725 1346 / 739 1366
* notice: next accum: outdated-unq outdated-all / unq all: 726 1348 / 739 1366
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-03] / []

2023-09-16T16:10:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6208346713 # 1906
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 7 20
* notice: prev accum: outdated-unq outdated-all / unq all: 724 1344 / 738 1365
* notice: next accum: outdated-unq outdated-all / unq all: 725 1346 / 739 1366
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-09-02] / [2023-09-16]

2023-09-15T16:11:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6200358140 # 1903
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 7 21
* notice: prev accum: outdated-unq outdated-all / unq all: 723 1342 / 738 1365
* notice: next accum: outdated-unq outdated-all / unq all: 724 1344 / 738 1365
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-01] / []

2023-09-15T00:42:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6192439663 # 1901