@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-17T16:10:25Z",
+  "timestamp" : "2023-09-18T00:42:31Z",
   "count_outdated" : 1348,
   "uniques_outdated" : 726,
-  "count" : 1366,
-  "uniques" : 739,
+  "count" : 1367,
+  "uniques" : 740,
   "clones" : [
     {
       "timestamp": "2023-09-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -88,6 +88,15 @@
     },
     {
       "timestamp": "2023-09-16T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
