@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-09-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -49,6 +49,11 @@
     },
     {
       "timestamp": "2023-09-16T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-17T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
